--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,20 +2,77 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
+@layer components {
+  .neon-card.green {
+    border-left: 3px solid #12b78f;
+    box-shadow: 0 0 30px 30px rgba(13, 130, 102, 0.3) inset;
+    background-image: linear-gradient(135deg, rgba(13, 130, 102, 0.03), rgba(0, 0, 0, 0.75));
+  }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+  .neon-card.green.right {
+    border-right: 3px solid #12b78f;
+    box-shadow: 0 0 30px 30px rgba(13, 130, 102, 0.3) inset;
+    background-image: linear-gradient(315deg, rgba(13, 130, 102, 0.03), rgba(0, 0, 0, 0.75));
+  }
+
+  .neon-card.purple {
+    border-left: 3px solid #766ac8;
+    box-shadow: 0 0 30px 30px rgba(85, 75, 143, 0.3) inset;
+    background-image: linear-gradient(135deg, rgba(85, 75, 143, 0.03), rgba(0, 0, 0, 0.75));
+  }
+
+  .neon-card.purple.right {
+    border-right: 3px solid #766ac8;
+    box-shadow: 0 0 30px 30px rgba(85, 75, 143, 0.3) inset;
+    background-image: linear-gradient(315deg, rgba(85, 75, 143, 0.03), rgba(0, 0, 0, 0.75));
+  }
+
+  .neon-card.orange {
+    border-left: 3px solid #b58512;
+    box-shadow: 0 0 30px 30px rgba(131, 96, 13, 0.3) inset;
+    background-image: linear-gradient(135deg, rgba(131, 96, 13, 0.03), rgba(0, 0, 0, 0.75));
+  }
+
+  .neon-card.orange.right {
+    border-right: 3px solid #b58512;
+    box-shadow: 0 0 30px 30px rgba(131, 96, 13, 0.3) inset;
+    background-image: linear-gradient(315deg, rgba(131, 96, 13, 0.03), rgba(0, 0, 0, 0.75));
   }
 }
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+/*SLİDER*/
+.slider-container {
+  width: 100%;
+  height: 100px; /* Slider yüksekliği */
+  overflow: hidden;
+  position: relative;
+  background-color: #fff;
+}
+
+.slider {
+  display: flex;
+  animation: slideLeft 30s linear infinite;
+}
+
+.slide {
+  flex: 0 0 auto;
+width: 200px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 24px;
+  background-color: #f4f4f4;
+  color: #333;
+  width: 200px;
+  opacity: 1;
+  white-space: nowrap;
+}
+
+@keyframes slideLeft {
+  0% {
+    transform: translateX(100%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
